updated makefile and added delay to updates

--- a/embedded/Makefile
+++ b/embedded/Makefile
@@ -1,6 +1,5 @@
 OBJS = main.cpp bluemix_client.cpp jsoncpp.cpp
-HEADERS = bluemix_client.h json/json.h
-LIBS = -lmraa -lupm-grove -lmosquittopp
+LIBS = -lmraa -lupm-grove -lmosquittopp -lupm-groveloudness -lupm-servo
 CXXFLAGS = -std=c++11
-all: $(OBJS) $(HEADERS)
+all: $(OBJS)
 	g++ $(CXXFLAGS) $(OBJS) $(LIBS) -o main
